# windmar

./: .claudeignore  .env.example  .gitignore  CONTRIBUTING.md  Caddyfile  DEVELOPMENT.md  Dockerfile  INSTALLATION.md  LICENSE  PRODUCTION_READINESS_REVIEW.md  README.md  ROADMAP.md  WEATHER_PIPELINE.md  docker-compose.demo.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-demo.yml
alembic/: env.py
alembic/versions/: 002_engine_log_entries.py  003_voyage_tables.py
api/: auth.py  cache.py  cli.py  config.py  database.py  demo.py  forecast_layer_manager.py  health.py  live.py  main.py  middleware.py  models.py  rate_limit.py  resilience.py  state.py  tile_renderer.py  weather_fields.py  weather_service.py
api/reports/: __init__.py  noon_reports.py  pdf_generator.py  templates.py
api/routers/: __init__.py  cii.py  engine_log.py  fueleu.py  optimization.py  routes.py  system.py  tiles.py  vessel.py  voyage.py  voyage_history.py  weather.py  zones.py
api/schemas/: __init__.py  cii.py  common.py  engine_log.py  fueleu.py  optimization.py  vessel.py  voyage.py  weather.py  zones.py
api/weather/: __init__.py  formatters.py  frame_builder.py  grid_processor.py  ocean_mask.py  prefetch.py  router.py
assets/: 00-before-refactoring.excalidraw  01-phase1-schema-extraction.excalidraw  02-phase2-state-centralization.excalidraw  03-phase3-forecast-layer-manager.excalidraw  04-phase4-stateless-routers.excalidraw  05-phase5-stateful-routers.excalidraw
data/: demo-engine-log-seed.sql
docker/: init-db.sql
docker/migrations/: 002_voyage_tables.sql
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnalysisEntry.tsx  AnalysisPanel.tsx  AnalysisSlidePanel.tsx  AnalysisTab.tsx  AuthGate.tsx  CoastlineOverlay.tsx  DebugConsole.tsx  DemoFooter.tsx  EngineLogCharts.tsx  ForecastTimeline.tsx  FuelChart.tsx  Header.tsx  InitialFitBounds.tsx  MapComponent.tsx  MapOverlayControls.tsx  MapViewportProvider.tsx  MonteCarloPanel.tsx  ParetoChart.tsx  RegulationsDropdown.tsx  RouteIndicatorPanel.tsx  RouteMap.tsx  RouteTab.tsx  SettingsPanel.tsx  TabPanel.tsx  VelocityParticleLayer.tsx  VoyageContext.tsx  (+12 more)
scripts/: create-github-issues.sh  export_demo_snapshot.py  generate_engine_log_seed.py
src/: config.py  metrics.py
tests/: TN002_REPORT.md  conftest.py  test_e2e_sbg_integration.py  test_unit_calibration.py  test_unit_cii.py  test_unit_metrics.py  test_unit_sbg_nmea.py
(+83 files in other folders)
